--- a/semestr 4/symulacje komputerowe/symulacje_komputerowe_algorytmy.ipynb
+++ b/semestr 4/symulacje komputerowe/symulacje_komputerowe_algorytmy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Algortm symulacji trajektorii jednorodnego łańcucha Markowa w czasie dyskretnym"
+    "### Algorytm symulacji trajektorii jednorodnego łańcucha Markowa w czasie dyskretnym"
    ]
   },
   {
@@ -339,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Algortm symulacji trajektorii jednorodnego łańcucha Markowa w czasie ciągłym"
+    "### Algorytm symulacji trajektorii jednorodnego łańcucha Markowa w czasie ciągłym"
    ]
   },
   {
